# tantivy-ir-evaluation

./: .gitignore  Cargo.toml  Readme.md
lucene/: .project  Readme.md  build.gradle  settings.gradle
lucene/data/: _0.cfe  _0.si  _1.cfe  _1.si  _2.cfe  _2.si  _3.cfe  _3.si  _4.cfe  _4.cfs  _4.si  segments_1
lucene/src/main/java/lucene/ir/evaluation/: App.java
lucene/src/test/java/lucene/ir/evaluation/: AppTest.java
schemata/: movies.json  reuters.json
src/: index.rs  main.rs  metrics.rs  moviedb_importer.rs  reuters_importer.rs
