[package]
name = "tantivy-ir-evaluation"
version = "0.1.0"
authors = ["henning <henning.schumann@gmail.com>"]
edition = "2018"

[dependencies]
quick-xml = "0.14.0"
minidom = "*"
tantivy = "0.9.1"
regex = "1.1.7"
serde_json = { version = "1.0.39", features = ["preserve_order"] }
serde = { version = "1.0.90", features = ["derive"] }